# LinkedIn-Search-Agent

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
agent/: agent.py
